--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -16,8 +16,9 @@
     align-items: center;
     justify-content: flex-end;
     column-gap: 20px;
-    position: relative;
-    z-index: 98;
+    position: fixed;
+    z-index: 999;
+
 }
 
 #header-banner span {
@@ -55,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 999;
+ 
     border-radius: 0 0 10px 10px;
     overflow: hidden;
     height: 90px;
@@ -83,7 +84,7 @@
     height: 100%;
     position:fixed;
     background-color: rgba(66, 66, 66, 0.315);
-    z-index: 999;
+
     display: flex;
     align-items: center;
     justify-content: center;
